[package]
name = "qfield"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34.7"
tokio = {version="1.38.0", features = ["full"]}
snow = "0.9.6"
parking_lot = "0.12.3"
log = "0.4.21"
env_logger = "0.11.3"
hex = "0.4.3"
bytes = { version = "1.4.0", features = ["serde"] }
futures = "0.3.28"
async-trait = "0.1.71"
serde = { version = "1.0.166", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.71"
blake2 = "0.10.6"
ed25519-consensus = "2.1.0"

[dev-dependencies]
rand = "0.8.5"
