[package]
name = "bftd-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.86"
tracing-subscriber = { version = "0.3.18",features = ["env-filter"] }
reqwest = "0.12.7"
reqwest-eventsource = "0.6.0"
