[package]
name = "bftd-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = { version = "0.34.7", optional = true }
tokio = {version="1.38.0", features = ["full"]}
snow = { version = "0.9.6" , features = ["ring-accelerated"]}
parking_lot = "0.12.3"
log = "0.4.21"
env_logger = "0.11.3"
hex = "0.4.3"
bytes = { version = "1.6.0", features = ["serde"] }
futures = "0.3.28"
async-trait = "0.1.71"
serde = { version = "1.0.166", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.71"
blake2 = "0.10.6"
ed25519-consensus = "2.1.0"
thiserror = "1.0.42"
rand = "0.8.5"
seahash = "4.1.0"
tracing = "0.1.40"
prometheus = "0.13.4"
rocksdb = { version = "0.22.0"}

[dev-dependencies]
tempdir = "0.3.7"
tracing-subscriber = { version = "0.3.18",features = ["env-filter"] }

[features]
sled_store = ["sled"]
