[package]
name = "bftd-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bftd-core = { path = "../bftd-core" }
anyhow = "1.0.86"
rand = "0.8.5"
toml = "0.8.14"
tokio = {version="1.38.0", features = ["full"]}
prometheus = "0.13.4"
axum = "0.7.5"
tracing = "0.1.40"
futures = "0.3.30"
bytes = { version = "1.6.0", features = ["serde"] }
hex = "0.4.3"
mime = "0.3.17"
serde = { version = "1.0.203", features = ["derive"] }
handlebars = "5.1.2"
async-stream = "0.3.5"
serde_json = "1.0.117"
serde_with = "3.9.0"
rocksdb = { version = "0.22.0"}
bincode = "1.3.3"
parking_lot = "0.12.3"

[dev-dependencies]
tempdir = "0.3.7"
tokio = {version="1.38.0", features = ["full", "test-util"]}
tracing-subscriber = { version = "0.3.18",features = ["env-filter"] }
