[package]
name = "bftd"
version = "0.1.0"
edition = "2021"

[dependencies]
bftd-core = { path = "../bftd-core" }
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.86"
rand = "0.8.5"
toml = "0.8.14"
tokio = {version="1.38.0", features = ["full"]}
prometheus = "0.13.4"
axum = "0.7.5"
tracing = "0.1.40"
futures = "0.3.30"
tracing-subscriber = { version = "0.3.18",features = ["env-filter"] }
