[package]
name = "bftd-main"
version = "0.1.0"
edition = "2021"

[dependencies]
bftd-core = { path = "../bftd-core" }
bftd-server = { path = "../bftd-server" }
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.86"
tracing-subscriber = { version = "0.3.18",features = ["env-filter"] }
